<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/pastMatch"
        android:enabled="true"
        android:title="@string/match_"
        android:icon="@drawable/match"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/team"
        android:enabled="true"
        android:title="@string/team_"
        android:icon="@drawable/ball"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/favorite_match"
        android:title="@string/favorite_match_"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorites_team"
        android:enabled="true"
        android:icon="@drawable/favorite_team"
        android:title="@string/favorite_team_"
        app:showAsAction="ifRoom"/>

</menu>